[package]
name = "brightness"
version = "0.1.0"
authors = ["kuba34 <15799956+kuba34@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0
debug = true
lto = false
debug-assertions = true
codegen-units = 4
incremental = true
rpath = false

[profile.release]
opt-level = 'z'
debug = false
lto = true
debug-assertions = false
panic = 'unwind'
incremental = false
codegen-units = 1

[dependencies]
getopts = "0.2"
